--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     commands:
-      - pip install virtualenv
+      - sudo pip install virtualenv
   build:
     commands:
       - virtualenv venv
