--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,8 +7,7 @@ phases:
   build:
     commands:
       - virtualenv venv
-      - ls
-      - source venv/bin/activate
+      - . venv/bin/activate
       - pip install -r requirements.txt
       - deactivate
   post_build:
