--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,8 +7,7 @@ phases:
   build:
     commands:
       - virtualenv venv
-      - . venv/bin/activate
-      - pip install -r requirements.txt
+      - pip install -E venv -r requirements.txt
       - deactivate
   post_build:
     commands:
